# be-rust-aydin-chat

./: .env  .gitignore  Cargo.toml  README.md
src/: app_state.rs  auth.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs
src/handlers/: chat.rs  friends.rs  groups.rs  health.rs  mod.rs  otp.rs  users.rs  ws.rs
tests/: health.rs
