[package]
name = "chat_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
totp-rs = "5.5"
rand = "0.8"