[package]
name = "chat_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-cors = "0.7"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
jsonwebtoken = "9"